Fixed navbar overlapping the scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,10 @@ body {
 	min-width: 100%;
 	width: 100%;
 	margin: 0;
-	overflow: auto;
+	padding: 0;
 }
 
 body {
-	/* display: flex;
-	align-items: center;
-	justify-content: center; */
 	background: var(--background-color);
 	color: var(--text-color);
 	font-family: "Roboto Mono", Inconsolata, monospace, sans-serif;
@@ -165,7 +162,7 @@ nav {
 	margin: 0;
 	margin-top: calc(var(--nav-height) * 1.1);
 	left: 0;
-	min-height: 90%;
+	min-height: 100%;
 	min-width: 90%;
 	display: flex;
 	align-items: center;
@@ -259,7 +256,6 @@ a {
 }
 
 footer {
-	clear: both;
 	position: relative;
 	height: var(--nav-height);
 
@@ -269,6 +265,7 @@ footer {
 	width: 100%;
 	bottom: 0;
 	left: 0;
+	margin: 0;
 	background: linear-gradient(
 		0deg,
 		rgba(0, 0, 0, 0.22) 43%,
